# tensorrt_project

./: .gitignore  README.md
CPP/custom_model/: CMakeLists.txt
CPP/custom_model/data/: model_nchw.onnx
CPP/custom_model/include/: trt_engine.h
CPP/custom_model/src/: main.cpp  trt_engine.cpp
CPP/my_code_study/: CMakeLists.txt
CPP/my_code_study/include/: engine.h
CPP/my_code_study/src/: engine.cpp  main.cpp
CPP/tensorrt_onnx/: CMakeLists.txt
CPP/tensorrt_onnx/mnist/: README.md
PYTHON/tensorflow/convert_ssd_uff/my_model/save_model_input_float_no_fix_shape/saved_model/variables/: variables.index
PYTHON/tensorflow/convert_ssd_uff/my_model/save_model_input_int8_fix_shape_320x320/checkpoint/: checkpoint
PYTHON/tensorflow/convert_ssd_uff/my_model/save_model_input_int8_no_fix_shape/checkpoint/: checkpoint  ckpt-0.index
PYTHON/tensorflow/convert_ssd_uff/my_model/save_model_input_int8_no_fix_shape/saved_model/variables/: variables.index
PYTHON/tensorflow/mnist_keras/: convert_frozen_graph_to_onnx.txt  convert_keras_to_tensorflow_frozen_graph.py  load_and_predict.py  model.h5  model_nchw.trt  model_nhwc.onnx  model_nhwc.trt  train.py  trt_inference.py  use_frozen_graph_tf.py
PYTHON/tensorflow/mnist_keras/frozen_models/: frozen_graph.pb  frozen_graph.pbtxt
PYTHON/tensorflow/object_detection/: convert_ssd_onnx.txt  export_ckp_to_saved_model.txt  export_saved_model_frozen_graph.py  onxx_ssd_trt.py  output_tf_onnx.txt  tf2_inference_float_input.ipynb  tf2_inference_uint8_input.ipynb  tf_trt_graph.py  use_frozen_graph_tf.py
PYTHON/tensorflow/object_detection/.ipynb_checkpoints/: tf2_inference_float_input-checkpoint.ipynb  tf2_inference_uint8_input-checkpoint.ipynb
PYTHON/tensorflow/object_detection/my_model/save_model_input_float_no_fix_shape/checkpoint/: checkpoint
PYTHON/tensorflow/object_detection/my_model/save_model_input_int8_fix_shape_320x320/: pipeline.config
PYTHON/yolov3_onnx/: README.md  requirements.txt  yolov3_to_onnx.py
(+1 files in other folders)
